--- a/reporter/templates/base_generic.html
+++ b/reporter/templates/base_generic.html
@@ -23,7 +23,7 @@
       {% block sidebar %}
       <ul class="sidebar-nav">
         <li><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="">All cases</a></li>
+          <li><a href="{% url 'cases' %}">All cases</a></li>
           <li><a href="">All authors</a></li>
       </ul>
      {% endblock %}
